--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+%%writefile requirements.txt
 streamlit
 transformers
 sentence-transformers
-pinecone
+pinecone # Changed from pinecone-client
 torch # Added as transformers often requires a deep learning framework
 numpy # Added as sentence-transformers uses numpy
