--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 transformers
 sentence-transformers
-pinecone # Changed from pinecone-client
-torch # Added as transformers often requires a deep learning framework
-numpy # Added as sentence-transformers uses numpy
+faiss-cpu
+torch # transformers often requires a deep learning framework like torch
+numpy # faiss-cpu and sentence-transformers often depend on numpy
